[tool.poetry]
name = "commonroad-prediction"
version = "0.1.0"
description = "Collection and interface of CommonRoad prediction algorithms."
readme = "README.md"
authors = ["Cyber-Physical Systems Group, Technical University of Munich <commonroad@lists.lrz.de>"]
license = "BSD"
homepage = "https://commonroad.in.tum.de"
keywords= ["autonomous", "automated", "vehicles", "driving", "motion", "planning", "prediction"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows"
]
packages = [{include = "crpred"}]

[tool.poetry.dependencies]
python = "^3.8"
commonroad-io = ">=2023.2"
commonroad-drivability-checker = "^2023.1"
imageio = "^2.31.1"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
prospector = {extras = ["with-mypy"], version = "^1.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
experimental-string-processing = true

[tool.autoflake]
max-line-length = 120